--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -1,6 +1,6 @@
 <div class="table">
     <div fxLayout="row" fxLayoutAlign="end" class="margin15">
-        <button mat-raised-button color="primary">Add</button>
+        <button mat-raised-button color="primary" (click)="bookslot()">Add</button>
     </div>
     <table id="customers">
       <tr>
