date restriction to 3 days

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -4,12 +4,12 @@
 <div class="container">
   <section class="inner-cont">
     <div>
-      <mat-form-field class="width100 margin-top20">
+      <mat-form-field class="width100 margin-top15">
         <input matInput placeholder="Name" [(ngModel)]="user.name" required (input)="formValidate()">
       </mat-form-field>
     </div>
     <div>
-      <mat-form-field class="width100 margin-top20">
+      <mat-form-field class="width100 margin-top15">
         <input matInput placeholder="Contact Number" type="number" [(ngModel)]="user.contact" required pattern="[1-9]{1}[0-9]{9}"
           #contact="ngModel" (input)="formValidate()" />
       </mat-form-field>
@@ -17,39 +17,42 @@
     <span *ngIf="contact.touched && contact.errors" class="error"> Enter a valid contact number</span>
 
     <div>
-      <mat-form-field class="width100 margin-top20">
-        <input matInput [matDatepicker]="picker" placeholder="Choose the date" (dateChange)="onDateSelect($event)">
+      <mat-form-field class="width100 margin-top15">
+        <input matInput [matDatepicker]="picker" placeholder="Choose the date" [min]="mindate" 
+              [max]="maxdate" (dateChange)="onDateSelect($event)">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
     </div>
-    <div>
-      <mat-form-field class="width100 margin-top20">
-        <mat-label>Start Time</mat-label>
-        <mat-select (selectionChange)="onSelectStartTime($event)" [disabled]="!isSelectedDate">
-          <mat-option *ngFor="let time of timeArray" [value]="time">
-            {{ time }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field class="width100 margin-top20">
-        <mat-label>Book For</mat-label>
-        <mat-select (selectionChange)="onSelectEndTime($event)" [disabled]="!isSelectedDate">
-          <mat-option *ngFor="let time of endArraytimes" [value]="time.value">
-            {{ time.title }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
+    <section fxLayout="row" fxLayoutAlign="space-between center">
+      <div fxFlex="48">
+        <mat-form-field class="width100 margin-top15">
+          <mat-label>Start Time</mat-label>
+          <mat-select (selectionChange)="onSelectStartTime($event)" [disabled]="!isSelectedDate">
+            <mat-option *ngFor="let time of timeArray" [value]="time">
+              {{ time }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div fxFlex="48">
+        <mat-form-field class="width100 margin-top15">
+          <mat-label>Book For</mat-label>
+          <mat-select (selectionChange)="onSelectEndTime($event)" [disabled]="!isSelectedDate">
+            <mat-option *ngFor="let time of endArraytimes" [value]="time.value">
+              {{ time.title }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </section>
     <div>
       <mat-form-field class="width100">
-        <textarea matInput placeholder="Leave a comment"></textarea>
+        <textarea matInput placeholder="Leave a comment" [(ngModel)]="user.comment"></textarea>
       </mat-form-field>
     </div>
     <div>
-      <button mat-raised-button color="primary" [disabled]="formValidate()">BOOK SLOT</button>
+      <button mat-raised-button color="primary" [disabled]="formValidate()" (click)="bookASlot()">BOOK SLOT</button>
     </div>
   </section>
 </div>
