--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -8,6 +8,7 @@
   #customers td, #customers th {
     border: 1px solid #ddd;
     padding: 8px;
+    text-align: center;
   }
   
   #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -20,6 +21,7 @@
     text-align: left;
     background-color: #4CAF50;
     color: white;
+    text-align: center;
   }
   .table{
       margin-top: 15px;
