--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,10 @@
     width: 100%;
 }
 
-.margin-top20 {
-    margin-top: 20px;
+.margin-top15 {
+    margin-top: 15px;
+}
+
+.align-center {
+    text-align: center;
 }
