--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,12 @@
-<div class="header">
+<ul>
+  <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+  <li><a routerLink="/details" routerLinkActive="active">Details</a></li>
+  <li style="float:right"><a class="active" href="">About</a></li>
+</ul>
+
+
+<!-- <div class="header">
   <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/details" routerLinkActive="active">Details</a>
-</div>
+</div> -->
 <router-outlet></router-outlet>
