--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,6 +2,35 @@
     background-color:aquamarine;
     line-height: 35px;
 }
+
 a{
     padding: 10px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: cadetblue;
 }
