--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -4,22 +4,22 @@
     width: 80%;
     margin: 0 auto;
   }
-  
+
   #customers td, #customers th {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
   }
-  
+
   #customers tr:nth-child(even){background-color: #f2f2f2;}
-  
+
   #customers tr:hover {background-color: #ddd;}
-  
+
   #customers th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: cadetblue;
     color: white;
     text-align: center;
   }
