--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -8,15 +8,15 @@
         <th>Time</th>
         <th>Students's Name</th>
         <th>Contact</th>
-        
+
       </tr>
-      <tr *ngFor="let student of studentList">
+      <tr *ngFor="let student of studentList" [matTooltip]="student.comment" matTooltipClass="example-tooltip-red">
         <td>{{student.bookingdate}}</td>
         <td>{{getDateFormat(student.starttime, student.endtime)}}</td>
         <td>{{student.name}}</td>
         <td>{{student.contact}}</td>
       </tr>
-      
+
     </table>
   </div>
 
