--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -1,5 +1,6 @@
 <div class="table">
     <div fxLayout="row" fxLayoutAlign="end" class="margin15">
+        <button style="margin-right: 15px;" mat-raised-button color="warn" (click)="deleteData()">Delete Data</button>
         <button mat-raised-button color="primary" (click)="bookslot()">Add</button>
     </div>
     <table id="customers">
