added muziclub timings in the UI

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 
   <mat-tab-group>
+    <mat-tab label="Muziclub Timings"> <app-open-timing></app-open-timing></mat-tab>
     <mat-tab label="Class Timings"> <app-class-time></app-class-time></mat-tab>
     <mat-tab label="Practice Timings"> <app-practice-time></app-practice-time> </mat-tab>
   </mat-tab-group>
