--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -1,4 +1,4 @@
-#customers {
+/* #customers {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 80%;
@@ -25,4 +25,4 @@
   }
   .table{
       margin-top: 15px;
-  }
+  } */
