--- a/src/app/open-timing/open-timing.component.html
+++ b/src/app/open-timing/open-timing.component.html
@@ -6,11 +6,45 @@
             <th>2nd Half Timing</th>
 		</tr>
 
-		<tr *ngFor="let time of openTimeArray">
+		<!-- <tr *ngFor="let time of openTimeArray">
 			<td>{{time.day}}</td>
 			<td>{{getFirstHalfTime(time)}}</td>
             <td>{{getSecondHalfTime(time)}}</td>
-		</tr>
-
+		</tr> -->
+        <tr>
+            <td>Monday</td>
+            <td>8:30 am to 12:0 pm</td>
+            <td>3:0 pm to 10:0 pm</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>8:30 am to 12:0 pm</td>
+            <td>3:0 pm to 10:0 pm</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>8:30 am to 12:0 pm</td>
+            <td>3:0 pm to 10:0 pm</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>Closed</td>
+            <td>3:0 pm to 10:0 pm</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>8:30 am to 12:0 pm</td>
+            <td>3:0 pm to 9:0 pm</td>
+        </tr>
+        <tr>
+            <td>Saturday</td>
+            <td>9:0 am to 12:0 pm</td>
+            <td>12:0 pm to 6:0 pm</td>
+        </tr>
+        <tr>
+            <td>Sunday</td>
+            <td>9:0 am to 12:0 pm</td>
+            <td>12:0 pm to 10:0 pm</td>
+        </tr>
 	</table>
 </div>
