contact us added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <ul>
   <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
   <li><a routerLink="/details" routerLinkActive="active">Details</a></li>
-  <li style="float:right"><a class="active" href="">About</a></li>
+  <li style="float:right"><a class="active" routerLink="/contactus" routerLinkActive="active">Contact Us</a></li>
 </ul>
 
 
