added edit delete icon

--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -10,6 +10,7 @@
         <th>Time</th>
         <th>Students's Name</th>
         <th>Contact</th>
+        <th>Action</th>
 
       </tr>
       <tr *ngFor="let student of studentList" [matTooltip]="student.comment" matTooltipClass="example-tooltip-red">
@@ -17,6 +18,9 @@
         <td>{{getDateFormat(student.starttime, student.endtime)}}</td>
         <td>{{student.name}}</td>
         <td>{{student.contact}}</td>
+        <td><mat-icon color="warn" (click)="onDeleteBooking()" class="pointer" >delete_forever</mat-icon>
+        <mat-icon style="margin-left: 20px" class="pointer">create</mat-icon>
+        </td>
       </tr>
     </table>
   </div>
