indivisual delete working

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,11 +3,5 @@
     <p>Call Us On<p>
 </div>
 <div class="big">
-    +91 75078 20055
-</div>
-
-<div>
-    <mat-icon>home</mat-icon>
-    <mat-icon color="warn">delete</mat-icon>
-    <mat-icon >create</mat-icon>
+    <mat-icon>call</mat-icon> +91 75078 20055
 </div>
