css change table

--- a/src/app/open-timing/open-timing.component.html
+++ b/src/app/open-timing/open-timing.component.html
@@ -1,4 +1,5 @@
-<div class="table">
+<div class="image">
+    <div class="table">
 	<table id="customers">
 		<tr>
 			<th>Day</th>
@@ -47,4 +48,5 @@
             <td>12:00 PM to 10:00 PM</td>
         </tr>
 	</table>
+</div>
 </div>
