--- a/src/styles.css
+++ b/src/styles.css
@@ -31,11 +31,15 @@
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
+
+    /* font-weight: 800; */
+    /* color:floralwhite */
   }
 
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
+  #customers tr:nth-child(even){background-color: #f2f2f2; opacity: 0.8}
+  #customers tr:nth-child(odd){background-color: darkseagreen; opacity: 0.8}
 
-  #customers tr:hover {background-color: #ddd;}
+  #customers tr:hover {background-color: #ddd; }
 
   #customers th {
     padding-top: 12px;
