background images changed

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,9 +1,8 @@
-
-<div>
-    <p>Call Us On<p>
+<div class="image">
+	<div>
+		<h2>Call Us On</h2>
+	</div>
+	<div class="big">
+		<mat-icon>call</mat-icon> +91 75078 20055
+	</div>
 </div>
-<div class="big">
-    <mat-icon>call</mat-icon> +91 75078 20055
-</div>
-
-
