--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -1,8 +1,9 @@
-<div class="table">
+<div class="image">
+    <div class="table">
     <div fxLayout="row" fxLayoutAlign="end" class="margin15">
         <button style="margin-right: 15px;" mat-raised-button color="warn"
          matTooltip="For admin use only" (click)="openDeletePopup()">Delete Data</button>
-        <button mat-raised-button color="primary" (click)="bookslot()">Add</button>
+        <button mat-raised-button color="primary" (click)="bookslot()"><mat-icon style="margin-right:5px;">add</mat-icon>Add</button>
     </div>
     <table id="customers">
       <tr>
@@ -24,3 +25,5 @@
     </table>
   </div>
 
+
+</div>
