--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -1,28 +1,11 @@
-/* #customers {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 80%;
-    margin: 0 auto;
-  }
+.image{
+     /* height:40em; */
+     /* position: relative; */
+     background-size:cover;
+     width:100%;
+     height:66.67vh;
+     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/neonbrand-TOf0z0ykWO8-unsplash%20(1).jpg?alt=media&token=bf426e6e-a3a8-4221-8fe1-8f451b94debf');
+     background-attachment:fixed;
+     background-repeat: no-repeat;
 
-  #customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-  }
-
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-
-  #customers tr:hover {background-color: #ddd;}
-
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: cadetblue;
-    color: white;
-    text-align: center;
-  }
-  .table{
-      margin-top: 15px;
-  } */
+   }
