--- a/src/app/class-time/class-time.component.html
+++ b/src/app/class-time/class-time.component.html
@@ -1,4 +1,5 @@
-<div class="table">
+<div class="image">
+    <div class="table">
     <table id="customers">
       <tr>
         <th>Day</th>
@@ -14,3 +15,4 @@
 
     </table>
   </div>
+</div>
