--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -2,11 +2,28 @@
 p{
     font-size: 20px;
 }
+h2{
+    margin-left: 20px;
+}
 .big{
-    font-size: 45px;
+    width:18%;
+    font-size: 25px;
     font-style: unset;
     font-family: cursive;
     margin-left: 50px;
-    color: crimson;
+    color:black;
+    background-color: azure;
+    opacity: 0.8;
 }
+.image{
+     /* height:40em; */
+     /* position: relative; */
+     background-size:cover;
+     width:100%;
+     height:66.67vh;
+     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/alessandro-vallainc-keML1ec0KYw-unsplash%20(1).jpg?alt=media&token=a836e485-2e35-4de9-8999-1c21389725bd');
+     background-attachment:fixed;
+     background-repeat: no-repeat;
+
+   }
 
