--- a/src/app/practice-time/practice-time.component.css
+++ b/src/app/practice-time/practice-time.component.css
@@ -11,7 +11,8 @@
     text-align: center;
   }
 
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
+  #customers tr:nth-child(even){background-color: #f2f2f2; opacity: 0.8}
+  #customers tr:nth-child(odd){background-color: cadetblue; opacity: 0.8}
 
   #customers tr:hover {background-color: #ddd;}
 
@@ -19,7 +20,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: cadetblue;
+    background-color: rgb(6, 97, 97);
     color: white;
     text-align: center;
   }
@@ -28,3 +29,14 @@
       width: 80%;
       margin: 0 auto;
   }
+  .image{
+     /* height:40em; */
+     /* position: relative; */
+     background-size:cover;
+     width:100%;
+     height:66.67vh;
+     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/renato-lacerda-7oc5a-DcSV4-unsplash.jpg?alt=media&token=649307fc-5caf-4fb3-9456-e5d1e2295d14');
+     background-attachment:fixed;
+     background-repeat: no-repeat;
+
+   }
