--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -3,8 +3,8 @@
      /* position: relative; */
      background-size:cover;
      width:100%;
-     height:66.67vh;
-     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/neonbrand-TOf0z0ykWO8-unsplash%20(1).jpg?alt=media&token=bf426e6e-a3a8-4221-8fe1-8f451b94debf');
+     height:72vh;
+     background-image:url('/src/assets/classtime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
 
