--- a/src/app/delete-one/delete-one.component.html
+++ b/src/app/delete-one/delete-one.component.html
@@ -1,5 +1,5 @@
 <div>
-	<mat-form-field class="example-full-width">
+	<mat-form-field>
 		<input matInput placeholder="Password" type="password" [(ngModel)]="password">
     </mat-form-field>
 </div>
