--- a/src/app/open-timing/open-timing.component.css
+++ b/src/app/open-timing/open-timing.component.css
@@ -3,8 +3,8 @@
      /* position: relative; */
      background-size:cover;
      width:100%;
-     height:66.67vh;
-     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/freestocks-org-gv1T8bOoAUs-unsplash.jpg?alt=media&token=05d89302-f383-4a1d-948b-87a6f847318f');
+     height:72vh;
+     background-image:url('/src/assets/muziclubtime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
 
