--- a/src/app/practice-time/practice-time.component.css
+++ b/src/app/practice-time/practice-time.component.css
@@ -34,8 +34,8 @@
      /* position: relative; */
      background-size:cover;
      width:100%;
-     height:66.67vh;
-     background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/renato-lacerda-7oc5a-DcSV4-unsplash.jpg?alt=media&token=649307fc-5caf-4fb3-9456-e5d1e2295d14');
+     height:72vh;
+     background-image:url('/src/assets/practicetime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
 
