deleted edit component

--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -19,7 +19,7 @@
         <td>{{student.name}}</td>
         <td>{{student.contact}}</td>
         <td><mat-icon color="warn" (click)="onDeleteBooking(student.id)" class="pointer" matTooltip="Delete Booking">delete_forever</mat-icon>
-        <mat-icon style="margin-left: 20px" class="pointer" matTooltip="Edit Booking" (click)="onEditBooking(student)">create</mat-icon>
+        <mat-icon style="margin-left: 20px" class="pointer" matTooltip="Edit Booking">create</mat-icon>
         </td>
       </tr>
     </table>
