added edit, still not working popup

--- a/src/app/add/add.component.css
+++ b/src/app/add/add.component.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     line-height: 40px;
     font-weight: bold;
     border-bottom: 1px solid gainsboro;
@@ -19,4 +19,4 @@
 .margin-bottom {
     margin-bottom: 10px;
 }
-
+ */
