table scroll and date select from input

--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -7,5 +7,5 @@
      background-image:url('/src/assets/classtime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
-
+     overflow: scroll;
    }
