--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -5,7 +5,7 @@
   <section class="inner-cont">
     <div>
       <mat-form-field class="width100 margin-top15">
-        <input matInput placeholder="Name" [(ngModel)]="user.name" required (input)="formValidate()">
+        <input matInput placeholder="Name" [(ngModel)]="user.name" required (input)="formValidate()" autocomplete="off">
       </mat-form-field>
     </div>
     <div>
@@ -20,7 +20,7 @@
     <div>
       <mat-form-field class="width100 margin-top15">
         <input matInput [matDatepicker]="picker" placeholder="Choose the date" [min]="mindate"
-              [max]="maxdate" (dateChange)="onDateSelect($event)">
+              [max]="maxdate" (dateChange)="onDateSelect($event)" (click)="picker.open()" autocomplete="off">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
