--- a/src/app/practice-time/practice-time.component.css
+++ b/src/app/practice-time/practice-time.component.css
@@ -1,4 +1,4 @@
-#customers {
+/* #customers {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     margin: 0 auto;
@@ -30,8 +30,6 @@
       margin: 0 auto;
   }
   .image{
-     /* height:40em; */
-     /* position: relative; */
      background-size:cover;
      width:100%;
      height:72vh;
@@ -39,4 +37,53 @@
      background-attachment:fixed;
      background-repeat: no-repeat;
 
-   }
+   } */
+
+   #customers {
+   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+   border-collapse: collapse;
+   margin: 0 auto;
+   width: 100%;
+ }
+ #customers td, #customers th {
+   border: 1px solid #ddd;
+   padding: 8px;
+   text-align: center;
+ }
+ #customers tr:nth-child(even){background-color: #f2f2f2; opacity: 0.8}
+ #customers tr:nth-child(odd){background-color: cadetblue; opacity: 0.8}
+ #customers tr:hover {background-color: #ddd;}
+ #customers th {
+   padding-top: 12px;
+   padding-bottom: 12px;
+   text-align: left;
+   background-color: rgb(6, 97, 97);
+   color: white;
+   text-align: center;
+ }
+ .table{
+     /* margin-top: 15px; */
+     width: 80%;
+     margin: 0 auto;
+     height: 49.2vh;
+     overflow-y: auto;
+     padding: 0 !important;
+ }
+ .image{
+    /* height:40em; */
+    /* position: relative; */
+    background-size:cover;
+    width:100%;
+    height:72vh;
+    background-image:url('/src/assets/practicetime.jpg');
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+  }
+  .list-container {
+   height: 360px;
+   width: 500px;
+   border: 1px solid black;
+  }
+  .padding-10 {
+   padding: 15px 10%;
+  }
