--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -1,4 +1,4 @@
-<div class="image">
+<!-- <div class="image">
     <div class="table">
     <div fxLayout="row" fxLayoutAlign="end" class="margin15">
         <button style="margin-right: 15px;" mat-raised-button color="warn"
@@ -24,7 +24,35 @@
       </tr>
     </table>
   </div>
+</div> -->
+
+
+<!-- <mat-icon style="margin-left: 20px" class="pointer" matTooltip="Edit Booking" (click)="onEditBooking(student)">create</mat-icon> -->
+
+<div class="image">
+   <div fxLayout="row" fxLayoutAlign="end" class="padding-10">
+       <button style="margin-right: 15px;" mat-raised-button color="warn"
+        matTooltip="For admin use only" (click)="openDeletePopup()">Delete Data</button>
+       <button mat-raised-button color="primary" (click)="bookslot()"><mat-icon style="margin-right:5px;">add</mat-icon>Add</button>
+   </div>
+   <div class="table">
+   <table id="customers">
+     <tr>
+       <th>Date</th>
+       <th>Time</th>
+       <th>Students's Name</th>
+       <th>Contact</th>
+       <th>Action</th>
+     </tr>
+     <tr *ngFor="let student of studentList" [matTooltip]="student.comment" matTooltipClass="example-tooltip-red">
+       <td>{{student.bookingdate}}</td>
+       <td>{{getDateFormat(student.starttime, student.endtime)}}</td>
+       <td>{{student.name}}</td>
+       <td>{{student.contact}}</td>
+       <td><mat-icon color="warn" (click)="onDeleteBooking(student.id)" class="pointer" matTooltip="Delete Booking">delete_forever</mat-icon>
+       </td>
+     </tr>
+   </table>
+ </div>
 </div>
-
-
 <!-- <mat-icon style="margin-left: 20px" class="pointer" matTooltip="Edit Booking" (click)="onEditBooking(student)">create</mat-icon> -->
