class timings from database

--- a/src/app/open-timing/open-timing.component.html
+++ b/src/app/open-timing/open-timing.component.html
@@ -6,6 +6,23 @@
 			<th>1st Half Timing</th>
             <th>2nd Half Timing</th>
 		</tr>
+        <tr *ngFor="let time of openTimeArray">
+            <td>{{time.day}}</td>
+            <td>{{getFirstHalfTime(time)}}</td>
+            <td>{{getSecondHalfTime(time)}}</td>
+        </tr>
+	</table>
+</div>
+</div>
+
+<!-- <div class="image">
+    <div class="table">
+	<table id="customers">
+		<tr>
+			<th>Day</th>
+			<th>1st Half Timing</th>
+            <th>2nd Half Timing</th>
+		</tr>
         <tr>
             <td>Monday</td>
             <td>8:30 AM to 12:00 PM</td>
@@ -43,4 +60,4 @@
         </tr>
 	</table>
 </div>
-</div>
+</div> -->
