--- a/src/app/open-timing/open-timing.component.css
+++ b/src/app/open-timing/open-timing.component.css
@@ -4,8 +4,9 @@
      background-size:cover;
      width:100%;
      height:72vh;
-     background-image:url('/src/assets/muziclubtime.jpg');
+     background-image:url('../../assets/muziclubtime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
      overflow: scroll;
+
    }
