--- a/src/app/class-time/class-time.component.css
+++ b/src/app/class-time/class-time.component.css
@@ -4,7 +4,7 @@
      background-size:cover;
      width:100%;
      height:72vh;
-     background-image:url('/src/assets/classtime.jpg');
+     background-image:url('../../assets/classtime.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
      overflow: scroll;
