--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -22,7 +22,7 @@ h2{
      width:100%;
      height:76vh;
      /* background-image:url('https://firebasestorage.googleapis.com/v0/b/muziclubapp.appspot.com/o/alessandro-vallainc-keML1ec0KYw-unsplash%20(1).jpg?alt=media&token=a836e485-2e35-4de9-8999-1c21389725bd'); */
-     background-image: url('/src/assets/contact.jpg');
+     background-image: url('../../assets/contact.jpg');
      background-attachment:fixed;
      background-repeat: no-repeat;
 
