--- a/src/app/practice-time/practice-time.component.css
+++ b/src/app/practice-time/practice-time.component.css
@@ -75,7 +75,7 @@
     background-size:cover;
     width:100%;
     height:72vh;
-    background-image:url('/src/assets/practicetime.jpg');
+    background-image:url('../../assets/practicetime.jpg');
     background-attachment:fixed;
     background-repeat: no-repeat;
   }
