muziclub logo inserted with media query changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
-.head{
-text-align:center;
+h1 {
+    font-size: 32px;
+}
+img {
+    height: 55px;
+    width: 63px;
+}
+@media (max-width: 450px) {
+    h1 {
+        font-size: 20px;
+    }
+    img {
+        height: 34px;
+        width: 39px;
+}
 }
