--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="head">
+<div fxLayout="row" fxLayoutAlign="center center">
+  <img src="../../assets/muziclubLogo.jpg" alt="Muziclub photo">
   <h1>
     Welcome to {{ title }}!
   </h1>
