add component media query changes

--- a/src/app/add/add.component.css
+++ b/src/app/add/add.component.css
@@ -20,3 +20,12 @@
     margin-bottom: 10px;
 }
  */
+.booking-width {
+    width: 100%
+}
+
+@media (max-width: 450px){
+  .booking-width {
+    width: 50%
+   }
+}
