--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -20,9 +20,9 @@
     <div>
       <mat-form-field class="width100 margin-top15">
         <input matInput [matDatepicker]="picker" placeholder="Choose the date" [min]="mindate"
-              [max]="maxdate" (dateChange)="onDateSelect($event)" (click)="picker.open()" autocomplete="off">
+              [max]="maxdate" (dateChange)="onDateSelect($event)" (click)="picker.open()" autocomplete="off" disabled>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <mat-datepicker touchUi #picker disabled="false"></mat-datepicker>
       </mat-form-field>
     </div>
     <section fxLayout="row" fxLayoutAlign="space-between center" class="booking-width">
