changed table font-size

--- a/src/styles.css
+++ b/src/styles.css
@@ -81,6 +81,12 @@
     cursor: pointer;
   }
 
+
+@media (max-width: 450px){
+    #customers {
+        font-size: 12px;
+  }
+}
 @media (max-width: 450px){
     .width100 {
         width: 50%;
