--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,3 +1,9 @@
+<div class="loader-background " *ngIf="isLoading">
+ <div class="loader-position">
+     <mat-spinner></mat-spinner>
+ </div>
+</div>
+
 <div class="header">
   Book A Slot
 </div>
