--- a/src/app/open-timing/open-timing.component.html
+++ b/src/app/open-timing/open-timing.component.html
@@ -1,3 +1,9 @@
+<div class="loader-background " *ngIf="isLoading">
+ <div class="loader-position">
+     <mat-spinner></mat-spinner>
+ </div>
+</div>
+
 <div class="image">
     <div class="table">
 	<table id="customers">
