--- a/src/app/practice-time/practice-time.component.html
+++ b/src/app/practice-time/practice-time.component.html
@@ -28,6 +28,11 @@
 
 
 <!-- <mat-icon style="margin-left: 20px" class="pointer" matTooltip="Edit Booking" (click)="onEditBooking(student)">create</mat-icon> -->
+<div class="loader-background " *ngIf="isLoading">
+ <div class="loader-position">
+     <mat-spinner></mat-spinner>
+ </div>
+</div>
 
 <div class="image">
    <div fxLayout="row" fxLayoutAlign="end" class="padding-10">
