media query added

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -31,8 +31,8 @@
         <mat-datepicker touchUi #picker disabled="false"></mat-datepicker>
       </mat-form-field>
     </div>
-    <section fxLayout="row" fxLayoutAlign="space-between center" class="booking-width">
-      <div fxFlex="48">
+    <section fxLayout.lg="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+      <div class="date-width">
         <mat-form-field class="width100 margin-top15">
           <mat-label>Start Time</mat-label>
           <mat-select (selectionChange)="onSelectStartTime($event)" [disabled]="!isSelectedDate">
@@ -42,7 +42,7 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div fxFlex="48">
+      <div class="date-width">
         <mat-form-field class="width100 margin-top15">
           <mat-label>Book For</mat-label>
           <mat-select (selectionChange)="onSelectEndTime($event)" [disabled]="!isSelectedDate">
