--- a/src/app/add/add.component.css
+++ b/src/app/add/add.component.css
@@ -29,3 +29,13 @@
     width: 50%
    }
 }
+
+.date-width {
+    width: 48%;
+}
+
+ @media (max-width: 450px) {
+    .date-width {
+      width: 100%;
+  }
+}
